crates/data-dict/tests/snapshots/validate_spec__s07_examples_on_boolean.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s07-examples-on-boolean.yaml\")"
---
Error: [S07] A `boolean` column must not have `values`, `range`, or `examples`.
    ╭─[ spec/s07-examples-on-boolean.yaml:11:19 ]
    │
  7 │   table:
    │ 
  9 │       - name: active
    │ 
 11 │         examples: [true, false]
    │                   ──────┬─────  
    │                         ╰─────── has type `boolean` but uses `examples`
────╯
